[package]
name = "dex-gobbler"
version = "0.0.1"
edition = "2021"

[lib]
doctest = false

[dependencies]
router-lib = { path = "../router-lib", version = "0.0.1" }
router-feed-lib = { path = "../router-feed-lib", version = "0.1" }
solana-account-decoder = "1.17"
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-logger = "1.17"
solana-program = "1.17"
solana-program-test = "1.17"
anchor-lang = "0.29.0"
anchor-client = "0.29.0"
anchor-spl = "0.29.0"
anyhow = "1.0.86"
itertools = "0.10.5"
async-trait = "0.1.79"
chrono = "0.4.38"
sha2 = "0.10.8"
tracing = "0.1.40"
spl-associated-token-account = "1.0.5"
serde = "1.0"
serde_derive = "1.0"
mango-feeds-connector = { workspace = true }
# raydium-cp
gobblerdev = {version = "0.1.142" }

[dev-dependencies]
router-test-lib = { path = "../router-test-lib", version = "0.1" }
