[package]
name = "dex-infinity"
version = "0.0.1"
edition = "2021"

[lib]
doctest = false

[dependencies]
router-lib = { path = "../router-lib", version = "0.0.1" }
router-feed-lib = { path = "../router-feed-lib", version = "0.1" }
solana-account-decoder = "1.17"
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-logger = "1.17"
solana-program = "1.17"
solana-program-test = "1.17"
anchor-lang = "0.29.0"
anchor-client = "0.29.0"
anchor-spl = "0.29.0"
anyhow = "1.0.86"
itertools = "0.10.5"
async-trait = "0.1.79"
chrono = "0.4.38"
sha2 = "0.10.8"
tracing = "0.1.40"
spl-associated-token-account = "1.0.5"

# infinity
solana-readonly-account = { version = "1.1.0", features=["solana-sdk"] }
solana-sdk-macro = "1.17"
jupiter-amm-interface = { git = "https://github.com/jup-ag/jupiter-amm-interface.git", version = "0.3.3" }
sanctum-lst-list = { git = "https://github.com/igneous-labs/sanctum-lst-list.git", branch = "master" }
sanctum-token-ratio = { git = "https://github.com/igneous-labs/sanctum-solana-utils.git", rev = "f6c40a0", version = "0.2.0" }
s-controller-lib = { git = "https://github.com/igneous-labs/S", branch = "master" }
s-jup-interface = { git = "https://github.com/igneous-labs/S", branch = "master" }
s-sol-val-calc-prog-aggregate = { git = "https://github.com/igneous-labs/S", branch = "master" }
flat_fee_interface = { git = "https://github.com/igneous-labs/S", branch = "master" }
serde = { version = "1.0.203", features = ["derive"] }

[dev-dependencies]
router-test-lib = { path = "../router-test-lib", version = "0.1" }
