[package]
name = "dex-invariant"
version = "0.0.1"
edition = "2021"

[lib]
doctest = false

[dependencies]
router-lib = { path = "../router-lib", version = "0.0.1" }
router-feed-lib = { path = "../router-feed-lib", version = "0.1" }
solana-account-decoder = "1.17"
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-logger = "1.17"
solana-program = "1.17"
solana-program-test = "1.17"
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
anyhow = "1.0.86"
itertools = "0.10.5"
async-trait = "0.1.79"
chrono = "0.4.38"
sha2 = "0.10.8"
tracing = "0.1.40"
spl-associated-token-account = "1.0.5"
invariant-types.path = "./src/internal/invariant-types"
decimal.path = "./src/internal/decimal"

num-traits = "0.2.18"
thiserror = "1.0.61"
num-derive = "0.3.3"
bytemuck = "1.16.0"
arrayref = "0.3.6"
serde = "1.0"
safe-transmute = "0.11.3"
uint = { workspace = true }


[dev-dependencies]
router-test-lib = { path = "../router-test-lib", version = "0.1" }
