[package]
name = "dex-orca"
version = "0.0.1"
edition = "2021"

[lib]
doctest = false

[dependencies]
router-lib = { path = "../router-lib", version = "0.0.1" }
router-feed-lib = { path = "../router-feed-lib", version = "0.1" }
solana-account-decoder = "1.17"
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-logger = "1.17"
solana-program = "1.17"
solana-program-test = "1.17"
whirlpools-client = { workspace = true }
anchor-lang = "0.29.0"
anchor-client = "0.29.0"
anchor-spl = "0.29.0"
anyhow = "1.0.86"
itertools = "0.10.5"
async-trait = "0.1.79"
chrono = "0.4.38"
sha2 = "0.10.8"
tracing = { version = "0.1", features = ["log"] }
serde = { version = "1.0.203", features = ["derive"] }

[dev-dependencies]
router-test-lib = { path = "../router-test-lib", version = "0.1" }
bincode = "1.3.3"
serde_json = "1.0.120"
lz4 = "1.25.0"
