[package]
name = "router-feed-lib"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[features]
default = []
tokio-console = ["dep:console-subscriber"]

[dependencies]
router-config-lib = { path = "../router-config-lib" }
tracing = { version = "0.1", features = ["log"] }
async-channel = "1.6"
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-stream = { version = "0.1"}
solana-client = { workspace = true }
solana-rpc-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-sdk = { workspace = true }
solana-account-decoder = "1.17"
futures = "0.3.17"
futures-core = "0.3"
futures-util = "0.3"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = { version = "18.0.0", features = ["ws", "http", "tls"] }
jsonrpc-derive = "18.0.0"
jsonrpc-pubsub = "18.0.0"
yellowstone-grpc-client = { workspace = true }
yellowstone-grpc-proto = { workspace = true }
itertools = "0.10.5"
bytes = "1.0"
serde = "1.0"
serde_derive = "1.0.197"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
atty = "0.2.14"
autobahn-executor = { path = "../../programs/autobahn-executor" }
base64 = "0.21.7"
serde_json = "1.0.120"
bincode = "1.3.3"
lz4 = "1.25.0"
async-trait = "0.1.79"

# tokio console
console-subscriber = { version = "0.4.0", optional = true }
