[package]
name = "autobahn-executor"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []
test-bpf = ["no-entrypoint"]

[dependencies]
solana-program = "1.17"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
bytemuck = "1.16.1"
solana-security-txt = "1.1.1"

[lib]
name = "autobahn_executor"
crate-type = ["cdylib", "lib"]
doctest = false

[dev-dependencies]
#mock-swap = { path = "../mock_swap", features = ["no-entrypoint"] }
test-case = "*"
tokio = "1.37.0"
solana-program-test = "1.17"
solana-sdk = "1.17"
bonfida-test-utils = "0.4.4"
