[package]
name = "fomo3d-raydium-cp-swap-client"
version = "0.1.422"
rust-version = "1.75.0"
edition = "2021"
license = "MIT"
description = "Client for Raydium CP Swap" # Added description field
default-run = "fomo3d-raydium-cp-swap-client"

[dependencies]
anchor-client = "0.29.0"
anchor-lang = "0.29.0"
raydium-cp-swap = { version = "0.1.142", features = ["no-entrypoint"] }
solana-sdk = ">=1.14, < 1.19"
solana-client = ">=1.18, < 1.19"
solana-account-decoder = ">=1.14, < 1.19"
solana-transaction-status = ">=1.14, < 1.19"
spl-token = { version = "^3", features = ["no-entrypoint"] }
spl-token-client = "0.7.0"
spl-memo = "^3"
spl-associated-token-account = { version = "2.2.0", features = [
    "no-entrypoint",
] }
spl-token-2022 = { version = "0.9.0", features = ["no-entrypoint"] }
clap = { version = "4.1.8", features = ["derive"] }
anyhow = "1.0.32"
solana-cli-output = "1.17.4"
solana-program = "1.17.4"
solana-banks-client = "1.17.4"
solana-program-runtime = "1.17.4"
solana-program-test = "1.17.4"
mpl-token-metadata = { version = "4.1.2" }
bincode = { version = "1.3.3" }
serde_json = { version = "1.0.78" }
serde = { version = "1.0", features = ["derive"] }
configparser = "3.0.0"
arrayref = "0.3.7"
solana-rpc-client-api = "1.17.4"
base64 = "0.22.1"
rand = "0.8.5"
tokio = { version = "1.40.0", features = ["full"] }
bs58 = "0.5.1"
colorful = "0.3.2"
regex = "1.11.0"
lazy_static = "1.5.0"
hex = "0.4.3"
futures = "0.3"
thiserror = "1.0.64"
